--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
+# .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
@@ -17,7 +17,7 @@
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
+# .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
 # Gradle
@@ -76,9 +76,9 @@ fabric.properties
 ##############################
 ## IntelliJ
 ##############################
-out/
-.idea/
-.idea_modules/
-*.iml
-*.ipr
-*.iws
+# out/
+# .idea/
+# .idea_modules/
+# *.iml
+# *.ipr
+# *.iws
