--- a/.gitignore
+++ b/.gitignore
@@ -12,30 +12,17 @@
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
+# .idea/**/uiDesigner.xml
 .idea/**/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
-# .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
 
 # CMake
 cmake-build-*/
@@ -73,12 +60,4 @@ fabric.properties
 # MACOS
 .DS_STORE
 
-##############################
-## IntelliJ
-##############################
-# out/
-# .idea/
-# .idea_modules/
-# *.iml
-# *.ipr
-# *.iws
+*.class
